--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
     "concurrently": "^9.1.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@testing-library/react": "^13.4.0",
+    "ajv": "^6.12.6",
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
+    "json-schema-traverse": "^0.4.1",
     "mysql2": "^3.12.0",
-    "react-router-dom": "^7.1.1",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@testing-library/react": "^13.4.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^6.14.2",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "font-awesome": "^4.7.0",
     "slick-carousel": "^1.8.1"
   },
   "engines": {
@@ -35,4 +33,3 @@
     "npm": "10.9.0"
   }
 }
-
