--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@testing-library/react": "^13.4.0",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^18.3.18",
     "ajv": "^6.12.6",
     "axios": "^1.7.9",
+    "csstype": "^3.1.3",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
+    "jquery": "^3.7.1",
     "json-schema-traverse": "^0.4.1",
     "mysql2": "^3.12.0",
     "react": "^18.2.0",
@@ -26,7 +30,8 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": "22.12.0",
