--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@types/react": "^18.3.18",
     "ajv": "^6.12.6",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "csstype": "^3.1.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
+    "helmet": "^8.1.0",
     "jquery": "^3.7.1",
     "json-schema-traverse": "^0.4.1",
+    "mongoose": "^6.11.4",
     "mysql2": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,10 +37,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.9.5",
-    "express": "^4.18.2",
-    "mongoose": "^6.11.4",
-    "cors": "^2.8.5"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": "22.12.0",
