--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "xss-clean": "^0.1.4"
   },
   "engines": {
     "node": "22.12.0",
