--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "csstype": "^3.1.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "font-awesome": "^4.7.0",
