--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "json-schema-traverse": "^0.4.1",
     "mongoose": "^6.11.4",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
