--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react": "^18.3.18",
     "ajv": "^6.12.6",
     "axios": "^1.7.9",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "csstype": "^3.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.0.1",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
@@ -37,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redis": "^4.6.13",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
