--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.17.3",
+    "connect-mongo": "^5.1.0",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
