--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "concurrently": "^9.1.1"
+    "concurrently": "^9.1.1",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -28,7 +29,7 @@
     "xss-clean": "^0.1.4"
   },
   "engines": {
-    "node": "22.12.0",
-    "npm": "10.9.0"
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
