--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.11.4",
     "node-cron": "^3.0.3",
+    "redis": "^4.6.13",
     "xss-clean": "^0.1.4"
   },
   "engines": {
